# coincidence

./: CMakeLists.txt  README.md
Assets/: audio-parameters.json
CPM_modules/: FindJUCE.cmake
Source/: CMakeLists.txt  MidiGeneratorEditor.cpp  MidiGeneratorLookAndFeel.cpp  MidiGeneratorProcessor.cpp  MidiGeneratorProcessor.h  Sampler.cpp  Sampler.h
Source/Audio/: CoincidenceAudioProcessor.cpp  CoincidenceAudioProcessor.h  Config.cpp  Config.h  FileLogger.cpp  GlitchEngine.cpp  GlitchEngine.h  JammerAudioProcessor.cpp  JammerAudioProcessor.h  MidiGeneratorParams.cpp  MidiGeneratorParams.h  MidiGeneratorProcessor.cpp  MidiGeneratorProcessor.h  NoteGenerator.cpp  NoteGenerator.h  Params.cpp  Params.h  PluginProcessor.cpp  PluginProcessor.h  SampleManager.cpp  SampleManager.h  Sampler.cpp  Sampler.h  ScaleManager.cpp  ScaleManager.h  TimingManager.cpp  TimingManager.h
Source/Audio/Effects/: BaseEffect.cpp  BaseEffect.h  Compression.cpp  Compression.h  Delay.cpp  Delay.h  FDNReverb.h  Flanger.cpp  Flanger.h  FxEngine.cpp  FxEngine.h  Gain.cpp  Gain.h  Pan.cpp  Pan.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  Stutter.cpp  Stutter.h
Source/Audio/Envelope/: EnvelopeManager.cpp  EnvelopeManager.h  EnvelopeParameterMapper.cpp  EnvelopeParameterMapper.h  EnvelopeParameterRegistry.cpp  EnvelopeParameterTypes.h  EnvelopePoint.h  EnvelopeUIControlsManager.cpp
Source/Audio/Midi/: NoteGenerator.cpp  NoteGenerator.h  ScaleManager.cpp  ScaleManager.h
Source/Audio/Sampler/: OnsetDetector.cpp  OnsetDetector.h  SampleManager.cpp  SampleManager.h  Sampler.cpp  Sampler.h  SamplerSound.cpp  SamplerSound.h  SamplerVoice.cpp  SamplerVoice.h  SamplerVoiceState.cpp  SamplerVoiceState.h
Source/Audio/Shared/: TimingManager.cpp  TimingManager.h
Source/Audio/Util/: AudioBufferQueue.h  AudioOscilloscope.cpp  AudioOscilloscope.h
Source/Gui/: LookAndFeel.cpp  LookAndFeel.h  MidiGeneratorEditor.cpp  MidiGeneratorEditor.h  MidiGeneratorLookAndFeel.cpp  MidiGeneratorLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  Util.h
Source/Gui/Components/: DirectionButton.h  DirectionSelector.h  EnvelopeComponent.cpp  EnvelopeComponent.h  EnvelopeTabs.cpp  EnvelopeTabs.h  GroupListView.h  HeaderComponent.h  Icon.h  KnobComponent.cpp  KnobComponent.h  SampleDetail.h  SampleList.cpp  SampleList.h  SampleNameCell.h  SampleRow.cpp  SampleRow.h  Toggle.h  WaveformComponent.cpp  WaveformComponent.h
Source/Gui/Components/Envelope/: ADSREnvelopeComponent.cpp  ADSREnvelopeComponent.h  EnvelopeComponent.cpp  EnvelopeComponent.h  EnvelopeGridSystem.cpp  EnvelopeGridSystem.h  EnvelopeParameterMapper.cpp  EnvelopeParameterMapper.h  EnvelopeParameterTypes.h  EnvelopePoint.h  EnvelopePointManager.cpp  EnvelopePointManager.h  EnvelopePresetGenerator.cpp  EnvelopePresetGenerator.h  EnvelopeRenderer.cpp  EnvelopeRenderer.h  EnvelopeShapeButton.h  EnvelopeTabs.h  EnvelopeUIControlsManager.cpp  EnvelopeUIControlsManager.h
Source/Gui/Components/Sample/: GroupListView.h  SampleDetail.h  SampleList.cpp  SampleList.h  SampleRow.cpp  SampleRow.h
Source/Gui/Sections/: BaseSection.cpp  BaseSection.h  EffectsSection.cpp  EffectsSection.h  EnvelopeSection.cpp  EnvelopeSection.h  GlitchSection.cpp  GlitchSection.h  GrooveSection.cpp  GrooveSection.h  PitchSection.cpp  PitchSection.h  SampleSection.cpp  SampleSection.h
Source/Shared/: Models.h  ModulationMatrix.cpp  ModulationMatrix.h  ParameterBinding.cpp  ParameterBinding.h  ParameterLoader.cpp  ParameterLoader.h  StateManager.cpp  StateManager.h  TimingManager.cpp  TimingManager.h
Source/Shared/Envelope/: EnvelopeManager.cpp  EnvelopeManager.h  EnvelopeParameterMapper.h  EnvelopeParameterTypes.h
Source/Shared/Parameters/: Parameter.h  ParameterLoader.cpp  ParameterLoader.h  Params.h  StructParameter.h
